--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+
+  padding: 24px 0px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+input {
+  width: 224px;
+  padding: 8px 12px;
+  border-radius: 8px;
+  border: 1px solid #6b6b6b;
+}
+button {
+  display: block;
+  border-radius: 5px;
+
+  background-color: transparent;
+  border: 1px solid #333333;
+  color: #6b6b6b;
+
+  padding: 0px 10px;
+
+  cursor: pointer;
+}
